# atomix

./: Cargo.toml
.cargo/: config
bootloader/: .gitignore  Cargo.toml  Makefile  OVMF.fd  OVMF_CODE.fd  OVMF_VARS.fd  mount.sh  run-qemu.sh  unmount.sh
bootloader/.cargo/: config.toml
bootloader/src/: main.rs
bootloader/src/console/text/: output.rs
bootloader/src/uefi/: mod.rs
bootloader/src/uefi/proto/: file.rs  fs.rs  mod.rs  text.rs
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  test_utils.rs  vga.rs
src/gdt/: tss.rs
src/test_utils/: serial.rs
tests/: basic_boot.rs  panic_handler.rs
